--- a/index.html
+++ b/index.html
@@ -1,16 +1,135 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F8 PROJECT 02</title>
-    <!-- Reset css -->
-     <link rel="stylesheet" href="./assets/css/reset.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>F8 PROJECT 02</title>
+        <!-- Reset css -->
+        <link rel="stylesheet" href="./assets/css/reset.css" />
 
-     <!-- Styles -->
-      <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <h1>02</h1>
-</body>
+        <!-- embed fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Sen:wght@400..800&display=swap"
+            rel="stylesheet"
+        />
+
+        <!-- Styles -->
+        <link rel="stylesheet" href="./assets/css/style.css" />
+    </head>
+    <body style="height: 5000px;">
+        <!-- header -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- logo -->
+                    <img
+                        src="./assets/img/Lesson..svg"
+                        alt="Lesson"
+                        class="logo"
+                    />
+                    <!-- nav -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active">
+                                <a href="#!">Home</a>
+                            </li>
+                            <li>
+                                <a href="#!">Courses</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Reviews</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- action -->
+                    <div class="action">
+                        <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Hero -->
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Hero-left -->
+                    <div class="media-block">
+                        <img src="./assets/img/14.jpg" alt="hi" class="img" />
+
+                        <div class="hero-summary">
+                            <div class="items">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/list.svg"
+                                        alt="list"
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">UI/UX Design</p>
+                                </div>
+                            </div>
+                            <div class="items">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/code.svg"
+                                        alt="code"
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">Development</p>
+                                </div>
+                            </div>
+                            <div class="items">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/speaker.svg"
+                                        alt="speaker"
+                                    />
+                                </div>
+                                <div class="info">
+                                    <p class="label">30 Courses</p>
+                                    <p class="title">Marketing</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hero-right -->
+                    <div class="content-block">
+                        <h1 class="heading">
+                            Learn without limits and spread knowledge.
+                        </h1>
+                        <p class="desc title">
+                            Build new skills for that “this is my year” feeling
+                            with courses, certificates, and degrees from
+                            world-class universities and companies.
+                        </p>
+                        <div class="cta-group">
+                            <a href="#!" class="btn hero-cta ">See Courses</a>
+                            <button class="watch-video">
+                                <div class="icon">
+                                    <img
+                                        src="./assets/img/play.svg"
+                                        alt="play"
+                                    />
+                                </div>
+                                <span>Watch Video</span>
+                            </button>
+                        </div>
+                        <p class="desc">Recent engagement</p>
+                        <p class="desc stats">
+                            <strong>50K </strong>Students
+                            <strong>70+ </strong>Courses
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
