--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body style="height: 5000px;">
+    <body style="height: 5000px">
         <!-- header -->
         <header class="header fixed">
             <div class="main-content">
@@ -102,7 +102,7 @@
                     </div>
                     <!-- Hero-right -->
                     <div class="content-block">
-                        <h1 class="heading">
+                        <h1 class="heading lv1">
                             Learn without limits and spread knowledge.
                         </h1>
                         <p class="desc title">
@@ -111,7 +111,7 @@
                             world-class universities and companies.
                         </p>
                         <div class="cta-group">
-                            <a href="#!" class="btn hero-cta ">See Courses</a>
+                            <a href="#!" class="btn hero-cta">See Courses</a>
                             <button class="watch-video">
                                 <div class="icon">
                                     <img
@@ -122,11 +122,243 @@
                                 <span>Watch Video</span>
                             </button>
                         </div>
-                        <p class="desc">Recent engagement</p>
+                        <p class="desc-recent">Recent engagement</p>
                         <p class="desc stats">
                             <strong>50K </strong>Students
                             <strong>70+ </strong>Courses
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- popular -->
+        <div class="popular">
+            <div class="main-content">
+                <div class="popular-top">
+                    <div class="info">
+                        <h2 class="heading lv2">Our popular courses</h2>
+                        <p class="desc">
+                            Build new skills with new trendy courses and shine
+                            for the next future career.
+                        </p>
+                    </div>
+                    <div class="controls">
+                        <button class="control-btn">
+                            <svg
+                                width="40"
+                                height="40"
+                                viewBox="0 0 40 40"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M23 14L17 20L23 26"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <button class="control-btn">
+                            <svg
+                                width="40"
+                                height="40"
+                                viewBox="0 0 40 40"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M23 14L17 20L23 26"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="course-list">
+                    <!-- course-item1 -->
+                    <div class="course-item">
+                        <a href="#!">
+                            <img src="./assets/img/3.jpg" alt="" class="thumb"
+                        /></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >Basic web design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/rating-star.svg"
+                                        alt=""
+                                        class="star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc lv2 line-clamp line-2">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- course-item2 -->
+                    <div class="course-item">
+                        <a href="#!"
+                            ><img src="./assets/img/8.jpg" alt="" class="thumb"
+                        /></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >UI/UX design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/rating-star.svg"
+                                        alt=""
+                                        class="star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc lv2 line-clamp line-2">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- course-item3 -->
+                    <div class="course-item">
+                        <a href="#!"
+                            ><img
+                                src="./assets/img/13.jpg"
+                                alt=""
+                                class="thumb"
+                        /></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp"
+                                        >Web App design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/rating-star.svg"
+                                        alt=""
+                                        class="star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc lv2 line-clamp line-2">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Feedback -->
+        <div class="feedback">
+            <div class="main-content">
+                <div class="feedback-list">
+                    <div class="feedback-items">
+                        <div class="info">
+                            <img
+                                src="./assets/img/6.jpg"
+                                alt=""
+                                class="avatar"
+                            />
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img
+                                src="./assets/img/block-quote.svg"
+                                alt=""
+                                class="open-quotes"
+                            />
+                            <blockquote>
+                                Not only does my resume look impressive—filled
+                                with the names and logos of world-class
+                                institutions—but these certificates also bring
+                                me closer to my career goals by validating the
+                                skills I've learned."
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- features -->
+        <div class="features">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img class="lower" src="./assets/img/17.jpg" alt="" />
+                        <img src="./assets/img/18.jpg" alt="" />
+                    </div>
+
+                    <div class="content">
+                        <h2 class="title heading lv2">
+                            Learner outcomes through our awesome platform
+                        </h2>
+                        <p class="desc lv1">
+                            87% of people learning for professional development
+                            report career benefits like getting a promotion, a
+                            raise, or starting a new career.
+                        </p>
+                        <p class="desc lv1">Lesson Impact Report (2022)</p>
+                        <a href="" class="btn">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- features -->
+        <div class="features features-2nd">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img src="./assets/img/2 (2).jpg" alt="" />
+                    </div>
+
+                    <div class="content">
+                        <h2 class="title heading lv2">
+                            Take the next step toward your personal and
+                            professional goals with Lesson.
+                        </h2>
+                        <p class="desc lv1">
+                            Take the next step toward. Join now to receive
+                            personalized and more recommendations from the full
+                            Coursera catalog.
+                        </p>
+
+                        <a href="" class="btn">Join Now</a>
                     </div>
                 </div>
             </div>
