--- a/index.html
+++ b/index.html
@@ -606,25 +606,25 @@
                     </div>
                     <!-- colum3 -->
                     <div class="colum">
-                        <h3 class="heading">Company</h3>
+                        <h3 class="heading">Support</h3>
                         <ul class="list">
                             <li>
-                                <a href="#!">About Us</a>
+                                <a href="#!">FAQ’s</a>
                             </li>
                             <li>
-                                <a href="#!">Features</a>
+                                <a href="#!">Terms & Conditions</a>
                             </li>
                             <li>
-                                <a href="#!">Our Pricing</a>
+                                <a href="#!">Privacy Policy</a>
                             </li>
                             <li>
-                                <a href="#!">Latest News</a>
+                                <a href="#!">Contact Us</a>
                             </li>
                         </ul>
                     </div>
                     <!-- colum4 -->
                     <div class="colum">
-                        <h3 class="heading">Company</h3>
+                        <h3 class="heading">Address</h3>
                         <ul class="list">
                             <li>
                                 <a href="#!">About Us</a>
